# IUT_OCR

./: CMakeLists.txt  ProjetOCR.cbp  ProjetOCR.depend  ProjetOCR.layout  README.md  config.txt  diagramme_classe.dia  diagramme_sequence.dia  main.cpp  stats.sh
Modules/: FindCIMG.cmake  FindGMP.cmake
configs/: 94.txt  94.txt~  95.txt  95_2.txt
include/: Classe.h  Fenetre.h  Histogramme.h  MyImage.h  OCR.h  utils.h
include/caracteristique/: Caracteristique.h  Courbure.h  Isoperimetre.h  MomentGeometrique.h  Profil.h  Vecteur.h  Zoning.h
src/: Classe.cpp  Fenetre.cpp  Histogramme.cpp  MD5.cpp  MyImage.cpp  OCR.cpp  main.cpp  utils.cpp
src/caracteristique/: Caracteristique.cpp  Courbure.cpp  Isoperimetre.cpp  MomentGeometrique.cpp  Profil.cpp  Vecteur.cpp  Zoning.cpp
